swiglu/hls/.autopilot/db/swiglu.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3185:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3185:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3199:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3199:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3213:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:3213:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:5181:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:5181:7: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7144:9: warning: Added loop label VITIS_LOOP_37_1:   [xilinx-label-all-loops]
        for (int i = 0; i < 10; i++) {
        ^~~
        VITIS_LOOP_37_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7144:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7207:9: warning: Added loop label VITIS_LOOP_100_1:   [xilinx-label-all-loops]
        for (int w = 0; w < 9; w++) {
        ^~~
        VITIS_LOOP_100_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7207:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7273:2: warning: Added loop label VITIS_LOOP_166_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_166_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7273:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7282:2: warning: Added loop label VITIS_LOOP_185_2:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_185_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7282:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7299:9: warning: Added loop label VITIS_LOOP_202_3:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_202_3: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7299:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7363:48: error: Invalid Directive: for current device, ram_2p + uram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=gate_fp type=ram_2p impl=uram
                                               ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7384:9: warning: Added loop label VITIS_LOOP_287_1:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_287_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7384:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7413:9: warning: Added loop label VITIS_LOOP_316_1:   [xilinx-label-all-loops]
        for (int w = 0; w < 9; w++) {
        ^~~
        VITIS_LOOP_316_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7413:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7468:2: warning: Added loop label VITIS_LOOP_371_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 8; k++) {
 ^~~
 VITIS_LOOP_371_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7468:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7479:2: warning: Added loop label VITIS_LOOP_382_2:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_382_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7479:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7491:2: warning: Added loop label VITIS_LOOP_394_3:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_394_3: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7491:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7503:2: warning: Added loop label VITIS_LOOP_406_4:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_406_4: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7503:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7515:2: warning: Added loop label VITIS_LOOP_418_5:   [xilinx-label-all-loops]
 for (int b = 0; b < 8; b++) {
 ^~~
 VITIS_LOOP_418_5: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7515:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7530:9: warning: Added loop label VITIS_LOOP_433_6:   [xilinx-label-all-loops]
        for (int k = 0; k < 8; k++) {
        ^~~
        VITIS_LOOP_433_6: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7530:9: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7562:2: warning: Added loop label VITIS_LOOP_465_1:   [xilinx-label-all-loops]
 for (int b = 0; b < 32; b++) {
 ^~~
 VITIS_LOOP_465_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7562:2: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7568:5: warning: Added loop label VITIS_LOOP_471_2:   [xilinx-label-all-loops]
    for (int b = 0; b < 32; b++) {
    ^~~
    VITIS_LOOP_471_2: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7568:5: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7626:13: warning: Added loop label VITIS_LOOP_529_1:   [xilinx-label-all-loops]
            for (int j = 0; j < 16; j++) {
            ^~~
            VITIS_LOOP_529_1: 
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7626:13: note: FIX-IT applied suggested code changes
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7673:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=x_local_1 type=ram_1p impl=bram
                                                 ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7677:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=x_local_2 type=ram_1p impl=bram
                                                 ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7684:49: error: Invalid Directive: for current device, ram_2p + uram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=X1_cache type=ram_2p impl=uram
                                                ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7688:49: error: Invalid Directive: for current device, ram_2p + uram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=X2_cache type=ram_2p impl=uram
                                                ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7691:51: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=gate_cache type=ram_2p impl=bram
                                                  ^
C:\Users\Jacob\Desktop\Vitis_projects\swiglu\swiglu\hls\.autopilot\db\swiglu.pp.0.cpp:7696:52: error: Invalid Directive: for current device, rom_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=sigmoid_lut type=rom_1p impl=bram
                                                   ^
